projects/elements/src/input/input-group.css
:host {
  --background: var(--nve-sys-support-color);
  --color: var(--nve-sys-interaction-field-color);
  --border-radius: var(--nve-ref-border-radius-sm);
  --gap: calc(var(--nve-ref-space-xxxs) / 2);
  width: fit-content;
  contain: none;
}

[internal-host] {
  border-radius: var(--border-radius);
  overflow: hidden;
  width: max-content;
}

.input-slot {
  background: var(--background);
  border-radius: var(--border-radius);
  flex-direction: row;
  flex-wrap: nowrap;
  gap: var(--gap);
}

slot[name='label'] {
  align-self: center;
}

::slotted(nve-icon-button),
::slotted(nve-icon-button) {
  --background: var(--nve-sys-interaction-field-background);
  --color: var(--nve-sys-support-emphasis-color);
  --border-radius: 0;
}

::slotted(nve-select),
::slotted(nve-select) {
  --padding: 0 var(--nve-ref-size-200);
  width: fit-content;
}

::slotted([nve-control]),
::slotted([nve-control]) {
  --border-radius: 0 !important;
}

::slotted([first-control]) {
  --border-radius: var(--nve-ref-border-radius-sm) 0 0 var(--nve-ref-border-radius-sm) !important;
}

::slotted([last-control]) {
  --border-radius: 0 var(--nve-ref-border-radius-sm) var(--nve-ref-border-radius-sm) 0 !important;
}

